# ramsey-boyce-website

./: .gcloudignore  .gitignore  .pylintrc  README.md  app.yaml  daily_crossword.py  game.py  javascript_demos.py  main.py  misc.py  my.py  pom.xml  projects.py  pyproject.toml  requirements.txt  route_config.py  serpent_fusion.py  utils.py  visualizations.py
crosswords/: 2021-5-23.puz  2021-5-24.puz  2021-5-25.puz  2021-5-26.puz  2021-5-27.puz  2021-5-28.puz  2021-5-29.puz  test1_18.puz
src/main/: app.yaml
src/main/webapp/: bigger_projects.html  index.html  index.jsp  javascript_demos.html  random.html  smaller_projects.html
static/css/: crosswordnexus.css  style.css
static/daily_crossword/: crosswords.js  jspdf.min.js  puz.min.js  zip.js
static/game/: serpent-fusion.wasm
static/js/chaos_game/: Button.js  chaos_game.js  (+1 more)
static/resources/: chaos_game.avif  clickotron_full.avif  clickotron_pcb.avif  clickotron_pcb_camera.avif  crossword.avif  cube_timer.avif  element_words.avif  fractal_tree.avif  hp_tetris.avif  network_visualization_two_hidden_layers.avif  orbit_sim.avif  particle_life.avif  portal_2.avif  serpent_fusion.avif  transfer_learning.avif  voronoi_generator.avif  website_code.avif
static/serpent_fusion/: serpent-fusion.wasm
templates/: 404.html  base.html  basicPage_old.html  connectionPage_old.html  customPage.html  custom_page.html  jsDemoPage.html  js_demo_page.html  links.html  login.html
templates/pages/: daily_crossword.html  game.html  index.html  javascript_demos.html  misc.html  projects.html  serpent_fusion.html  visualizations.html
(+59 files in other folders)
