[tool.poetry]
name = "ramsey-boyce-website"
version = "0.1.0"
description = "My personal website"
authors = ["rmboyce"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-talisman = "^1.1.0"
flask-login = "^0.6.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
