[project]
name = "ramsey-boyce-website"
version = "0.1.0"
description = "My personal website"
authors = [{ name = "rmboyce" }]
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "flask>=3.0.2,<4",
    "flask-talisman>=1.1.0,<2",
    "flask-login>=0.6.3,<0.7",
    "python-dotenv>=1.0.1,<2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "watchdog>=6.0.0",
]
